--- a/src/app/courses/view/view.component.html
+++ b/src/app/courses/view/view.component.html
@@ -1,7 +1,8 @@
-<div class="container" style="margin-top:20px;height:500px">
-  <h3 style="margin-top:30px">Time Schedule</h3>
-  <table class="table table-striped table-bordered table-sm" style="margin-top: 50px; max-height: 50%">
-    <thead style="background-color: black;color:white">
+<div class="container">
+  <h3 style="text-align: center">Time Schedule</h3><br>
+  <div>
+  <table class="table table-striped table-bordered">
+    <thead>
       <th>Date</th>
       <th>Course</th>
       <th>Start Time</th>
@@ -13,17 +14,18 @@
     </thead>
     <ng-container *ngFor="let recipient of datewiseSessions | keyvalue">
       <tr>
-        <td [attr.rowspan]="recipient.value.length" style="vertical-align : middle;text-align:center">{{recipient.key}}
+        <td [attr.rowspan]="recipient.value.length">{{recipient.key}}
         </td>
         <td>{{recipient.value[0].course.course_name}}</td>
-        <td>{{recipient.value[0].start_time|date:'h:mm a'}}</td>
-        <td>{{recipient.value[0].end_time|date:'h:mm a'}}</td>
+        <td>{{recipient.value[0].start_time|date:'HH:mm a'}}</td>
+        <td>{{recipient.value[0].end_time|date:'HH:mm a'}}</td>
         <td>{{recipient.value[0].trainer.trainer_name}}</td>
         <td><span
-            *ngIf="recipient.value[0].backup_trainer!=undefined">{{recipient.value[0].backup_trainer.trainer_name}}</span>
+            *ngIf="recipient.value[0].backup_trainer!=undefined">{{recipient.value[0].backupTrainer.trainer_name}}</span>
         </td>
         <td>{{recipient.value[0].comment}}</td>
-        <td><button (click)="redirectToAdd(recipient.value[0].trainer_allocation_id)">remove</button></td>
+        <td style="text-align: center"><button class="btn btn-outline-light" (click)="deleteCourse(course.course_id)">
+          <i class="fa fa-trash-o" style="color:red;font-size:15px"></i></button></td>
 
       </tr>
       <ng-container *ngFor="let data of recipient.value; let i= index;">
@@ -33,18 +35,15 @@
           <td>{{recipient.value[i].end_time|date:'h:mm a'}}</td>
           <td>{{recipient.value[i].trainer.trainer_name}}</td>
           <td><span
-              *ngIf="recipient.value[i].backup_trainer!=undefined">{{recipient.value[i].backup_trainer.trainer_name}}</span>
+              *ngIf="recipient.value[i].backup_trainer!=undefined">{{recipient.value[i].backupTrainer.trainer_name}}</span>
           </td>
           <td>{{recipient.value[i].comment}}</td>
-          <td><button (click)="redirectToAdd(recipient.value[i].trainer_allocation_id)">remove</button></td>
-        </tr>
+          <td style="text-align: center"><button class="btn btn-outline-light" (click)="deleteCourse(course.course_id)">
+            <i class="fa fa-trash-o" style="color:red;font-size:15px"></i></button></td>
+  </tr>
       </ng-container>
     </ng-container>
   </table>
 </div>
 
-
-<ng-template #template>
-
-
-</ng-template>
+</div>
