--- a/src/app/courses/form/form.component.html
+++ b/src/app/courses/form/form.component.html
@@ -1,3 +1,4 @@
+<app-header select="AddBatch"></app-header>
 <div class="container">
     <h3 style="text-align: center">Add Session</h3>
     <form [formGroup]="TrainerAllocationForm">
