--- a/src/app/courses/view/view.component.html
+++ b/src/app/courses/view/view.component.html
@@ -1,25 +1,27 @@
 <app-header select="View"></app-header>
 <div class="container">
-  <h3 style="text-align: center">Time Schedule</h3><br>
+  <h2 style="text-align: center">Timesheet</h2><br>
 
   <div class="col-sm-4">
-  <label>Select Batch</label>
-  <select class="form-control" [(ngModel)]="selectedBatch" (change)='loadSessions()'>
-    <option *ngFor="let x of batches; index as i" value="i">{{x.batchName}}</option>
-  </select>
-</div><br><br>
+    <label>Batch :</label>
+    <select class="form-control" [(ngModel)]="selectedBatch" (change)='loadSessions()' placeholder="Select Batch">
+      <option value="" selected disabled>Select Batch</option>
+      <option *ngFor="let x of batches; index as i" [value]="x.batchId">{{x.batchName}}</option>
+    </select><br><br>
+  </div><br>
 
   <div *ngIf="var1" style="margin-top: 50px">
     <table class="table table-bordered">
       <thead>
-        <th>Date</th>
-        <th>Course</th>
-        <th>Start Time</th>
-        <th>End Time</th>
-        <th>Trainer</th>
-        <th>Back Up Trainer</th>
-        <th>Comments</th>
-        <th>Remove</th>
+        <tr>
+          <th>Date</th>
+          <th>Course</th>
+          <th>Start Time</th>
+          <th>End Time</th>
+          <th>Trainer</th>
+          <th>Back Up Trainer</th>
+          <th>Comments</th>
+        </tr>
       </thead>
       <ng-container *ngFor="let recipient of datewiseSessions | keyvalue">
         <tr>
@@ -33,8 +35,8 @@
               *ngIf="recipient.value[0].backup_trainer!=undefined">{{recipient.value[0].backupTrainer.trainer_name}}</span>
           </td>
           <td>{{recipient.value[0].comment}}</td>
-          <td style="text-align: center"><button class="btn btn-outline-light" (click)="deleteCourse(course.course_id)">
-              <i class="fa fa-trash-o" style="color:red;font-size:15px"></i></button></td>
+          <!-- <td style="text-align: center"><button class="btn btn-outline-light" (click)="deleteCourse(course.course_id)">
+              <i class="fa fa-trash-o" style="color:red;font-size:15px"></i></button></td> -->
 
         </tr>
         <ng-container *ngFor="let data of recipient.value; let i= index;">
@@ -47,12 +49,15 @@
                 *ngIf="recipient.value[i].backup_trainer!=undefined">{{recipient.value[i].backupTrainer.trainer_name}}</span>
             </td>
             <td>{{recipient.value[i].comment}}</td>
-            <td style="text-align: center"><button class="btn btn-outline-light" (click)="deleteSession()">
-                <i class="fa fa-trash-o" style="color:red;font-size:15px"></i></button></td>
+            <!-- <td style="text-align: center"><button class="btn btn-outline-light" (click)="deleteSession()">
+                <i class="fa fa-trash-o" style="color:red;font-size:15px"></i></button></td> -->
           </tr>
         </ng-container>
       </ng-container>
     </table>
   </div>
 
+  <div *ngIf="var2" class="select">
+    <img src="../../../assets/Images/noData.jpg"  class="img-fluid" alt="Responsive image">
+    </div>
 </div>
