--- a/src/app/courses/form/form.component.html
+++ b/src/app/courses/form/form.component.html
@@ -3,11 +3,11 @@
 
 <div class="container">
 
-  <div>
+  <div class="whole">
     <div *ngIf="var4" class="select">
       <h3>Select your Option</h3><br>
-      <button class="btn btn-sm btn-success" (click)='newBatch()'>New Batch</button><br><br>
-      <button class="btn btn-sm btn-primary" (click)='existingBatch()'>Existing Batch</button>
+      <button class="btn btn-sm btn-success button1" (click)='newBatch()'>New Batch</button><br><br>
+      <button class="btn btn-sm btn-primary button2" (click)='existingBatch()'>Existing Batch</button>
     </div>
 
     <div *ngIf="var5" class="col-sm-4" class="select">
