--- a/src/app/courses/view/view.component.css
+++ b/src/app/courses/view/view.component.css
@@ -22,7 +22,9 @@ table.dataTable thead .sorting_desc_disabled:before {
 .select
 {
     /* border: 1px solid black; */
-    margin: 80px 100px 80px 180px;
-    position: relative;
+    /* height: 20%;
+    width: 20%; */
+    margin: 50px 100px 80px 290px;
+    /* position: relative; */
 
 }
