--- a/src/app/courses/form/form.component.html
+++ b/src/app/courses/form/form.component.html
@@ -3,11 +3,11 @@
 
 <div class="container">
 
-  <div class="whole">
+  <div>
     <div *ngIf="var4" class="select">
       <h3>Select your Option</h3><br>
-      <button class="btn btn-sm btn-success button1" (click)='newBatch()'>New Batch</button><br><br>
-      <button class="btn btn-sm btn-primary button2" (click)='existingBatch()'>Existing Batch</button>
+      <button class="btn btn-sm center-block btn-success" (click)='newBatch()'>New Batch</button><br>
+      <button class="btn btn-sm center-block btn-primary" (click)='existingBatch()'>Existing Batch</button>
     </div>
 
     <div *ngIf="var5" class="col-sm-4" class="select">
@@ -16,14 +16,14 @@
         <option value="" selected disabled>Select Batch</option>
         <option *ngFor="let x of batches;index as i" [value]="x.batchId">{{x.batchName}}</option>
       </select><br>
-      <button class="btn btn-sm btn-danger" (click)='back1()'>Back</button>
+      <button class="btn btn-sm btn-danger center-block " (click)='back1()'>Back</button>
 
     </div>
     <div *ngIf="var1" class="col-sm-4" class="select">
       <h3>Batch Name</h3><br>
       <input class="form-control" type="text" id="batchName" [(ngModel)]="batchName"><br>
-      <button class="btn btn-sm btn-success" [disabled]='!batchName' (click)='addBatch()'>Add Batch</button><br><br>
-      <button class="btn btn-sm btn-danger" (click)='back()'>Back</button>
+      <button class="btn btn-sm center-block btn-success" [disabled]='!batchName' (click)='addBatch()'>Add Batch</button><br>
+      <button class="btn btn-sm center-block btn-danger" (click)='back()'>Back</button>
     </div>
   </div>
 
@@ -60,9 +60,10 @@
 
           <label>Comments</label>
           <textarea formControlName="comment" class="md-textarea form-control" rows="3"></textarea><br><br>
-
+          <div class="btn-group">
           <button class="btn btn-primary" style="margin-left: 130px" [disabled]="!(cid && tid && date && date1)" (click)='addRow()'>Add</button>
           <button class="btn btn-danger" (click)='back2()'>Back</button>
+        </div>
         </div>
 
         <div class="col-sm-4">
@@ -99,7 +100,7 @@
         </tr>
       </tbody>
     </table>
-    <button class="btn btn-danger"   [disabled]="!TrainerAllocationForm.valid" (click)='callSubmit()'>Submit</button>
+    <button class="btn btn-success center-block "   [disabled]="!TrainerAllocationForm.valid" (click)='callSubmit()'>Submit</button>
 
   </div>
 </div>
