--- a/src/app/courses/view/view.component.html
+++ b/src/app/courses/view/view.component.html
@@ -1,8 +1,8 @@
 <app-header select="View"></app-header>
 <div class="container">
-  <h2 style="margin-left: 450px">Timesheet</h2><br>
+  <h2 class="text-center">Timesheet</h2><br>
 
-  <div class="col-sm-3">
+  <div class="col-md-3">
     <label>Batch :</label>
     <select class="form-control" [(ngModel)]="selectedBatch" (change)='loadSessions()' placeholder="Select Batch">
       <option value="" selected disabled>Select Batch</option>
@@ -53,8 +53,8 @@
     </table>
   </div>
 
-  <div *ngIf="var2" >
-    <img class="select" src="../../../assets/Images/noData.jpg"  class="img-fluid" alt="Responsive image">
+  <div *ngIf="var2" class="text-center">
+    <img class="select" src="../../../assets/Images/noData.jpg"  class="rounded mx-auto d-block" alt="Responsive image">
     </div>
 </div>
 
