--- a/src/app/courses/cmanage/cmanage.component.html
+++ b/src/app/courses/cmanage/cmanage.component.html
@@ -1,19 +1,28 @@
 <app-header select="AddCourse"></app-header>
 <div class="container">
   <div class="row">
-    <div class="col-sm-5">
-      <h3>Add Course</h3><br>
-      <div class="col-xs-6">
-      <label style="font-size: medium">Course Name:</label>
-      <input type="text" class="form-control" [(ngModel)]="courseName" placeholder="Enter the Course Name"><br>
-      <button type="button" [disabled]="!courseName" class="btn btn-primary btn-sm" (click)="submit()">Add
-        Course</button>
+    <div class="col-md-5">
+
+
+      <div class="col-md-8">
+        <h2>Add Course</h2><br>
+        <div class="form-group">
+          <label style="font-size: medium">Course Name:</label>
+          <div class="input-group">
+            <input type="text" class="form-control" [(ngModel)]="courseName" placeholder="Enter the Course Name" ><br>
+            <span class="input-group-btn">
+              <button type="button" [disabled]="!courseName" class="btn btn-success" (click)="submit()"><i
+                  class="fa fa-plus-square-o" style="font-size: large"></i></button>
+            </span>
+          </div>
+
+        </div>
       </div>
     </div>
 
-    <div class="col-sm-7">
-      <h3>Available Courses</h3><br>
-      <div style="overflow-y:auto; max-height: 350px">  
+    <div class="col-md-7">
+      <h2>Available Courses</h2><br>
+      <div style="overflow-y:auto; max-height: 350px">
 
         <table class="table table-bordered tableFixHead">
           <thead class="thead-dark">
@@ -25,7 +34,8 @@
           <tbody>
             <tr *ngFor="let course of courseList" style="text-transform: capitalize">
               <td style="text-align: center">{{course.course_name|titlecase}}</td>
-              <td style="text-align: center"><button class="btn btn-outline-light" (click)="deleteCourse(course.course_id)">
+              <td style="text-align: center"><button class="btn btn-outline-light"
+                  (click)="deleteCourse(course.course_id)">
                   <i class="fa fa-trash-o" style="color:red;font-size:15px"></i></button></td>
             </tr>
           </tbody>
