--- a/src/app/courses/tmanage/tmanage.component.html
+++ b/src/app/courses/tmanage/tmanage.component.html
@@ -3,24 +3,29 @@
 
   <div class="row">
     <div class="col-sm-5">
-      <h3>Add Trainer</h3><br>
-      <div class="col-xs-6">
-        <label style="font-size: medium">Trainer Name:</label>
-        <input type="text" class="form-control" [(ngModel)]="trainerName" placeholder="Enter the Trainer Name"><br>
-        <label style="font-size: medium">Select Courses:</label><br>
 
-        <form #form='ngForm' (ngSubmit)="onSubmit(form)">
-          <div id="multiselect-sample" class="control-section">
-            <div class="control-styles">
-              <ejs-multiselect id='multiselect-filtering' name='name' [(ngModel)]='value' popupHeight="200px"
-                [dataSource]='courses' [fields]='fields' (filtering)='onFiltering($event)' [allowFiltering]='true'
-                [placeholder]='watermarks' [value]='value'></ejs-multiselect><br>
-              <button type="submit" [disabled]="trainerName==''||value.length==0" class="btn btn-primary btn-sm"
-                ejs-button>Add Trainer</button>
-            </div>
-          </div>
-        </form>
-        <br>
+      <div class="col-xs-6">
+        <h3>Add Trainer</h3><br>
+        <div class="form-group">
+    
+            <label style="font-size: medium">Trainer Name:</label>
+            <input type="text" class="form-control" [(ngModel)]="trainerName" placeholder="Enter the Trainer Name"><br>
+            <label style="font-size: medium">Select Courses:</label><br>
+
+            <form #form='ngForm' (ngSubmit)="onSubmit(form)">
+              <div id="multiselect-sample" class="control-section">
+                <div class="control-styles">
+                  <ejs-multiselect id='multiselect-filtering' name='name' [(ngModel)]='value' popupHeight="200px"
+                    [dataSource]='courses' [fields]='fields' (filtering)='onFiltering($event)' [allowFiltering]='true'
+                    [placeholder]='watermarks' [value]='value'></ejs-multiselect><br>
+                  <button type="submit" [disabled]="trainerName==''||value.length==0" class="btn btn-success btn-sm pull-right"
+                    ejs-button>Add Trainer</button>
+                </div>
+              </div>
+            </form>
+            <br>
+      
+        </div>
         <!-- <div class="container">
           <mat-form-field>
             <mat-select [multiple]="true" [(ngModel)]="selectedCourses">
