--- a/src/app/courses/cmanage/cmanage.component.html
+++ b/src/app/courses/cmanage/cmanage.component.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-5">
-      <h3>Add Course</h3><br>
+      <h3 style="margin-left: 40px">Add Course</h3><br>
       <div class="col-xs-6">
       <label style="font-size: medium">Course Name:</label>
       <input type="text" class="form-control" [(ngModel)]="courseName" placeholder="Enter the Course Name"><br>
@@ -12,7 +12,7 @@
     </div>
 
     <div class="col-sm-7">
-      <h3>Available Courses</h3><br>
+      <h3 style="text-align: center">Available Courses</h3><br>
       <div style="overflow-y:auto; max-height: 350px">  
 
         <table class="table table-bordered tableFixHead">
