--- a/src/app/courses/view/view.component.css
+++ b/src/app/courses/view/view.component.css
@@ -24,7 +24,15 @@ table.dataTable thead .sorting_desc_disabled:before {
     /* border: 1px solid black; */
     /* height: 20%;
     width: 20%; */
-    margin: 50px 100px 80px 290px;
+    margin-left: 425px;
     /* position: relative; */
 
 }
+
+
+.tableFixHead          { overflow-y: auto; height: 100px; }
+.tableFixHead thead th { position: sticky; top: 0; }
+
+table  { border-collapse: collapse; width: 100%; }
+th, td { padding: 8px 16px; }
+th     { background: black; color: white }
